getting the api back up adn running
